--- a/templates/catalog_simple.html
+++ b/templates/catalog_simple.html
@@ -38,7 +38,7 @@ body {
 </style>
 
 
-<p class="advantages-item">Find similiar product:</p>
+<p class="advantages-item">Find similar product:</p>
 
 
 <form method="POST">
